--- a/index.html
+++ b/index.html
@@ -46,9 +46,6 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">Timeline</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-          </li>
         </ul>
       </div>
     </div>
@@ -229,7 +226,7 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="https://images.all-free-download.com/images/graphicthumb/colored_pencils_184415.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
