--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Portfolio</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Hi!</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -53,6 +53,7 @@
 
   <!-- Header -->
   <header class="masthead">
+
     <div class="container">
       <div class="intro-text">
         <div class="intro-lead-in">Welcome to My Portfolio Website!</div>
@@ -74,8 +75,8 @@
       <div class="row text-center">
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+              <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">My Skills</h4>
           <p class="text-muted">Having participated in the Fleurish/BC Skills Cohort II program, I have become skilled in HTML, CSS, and JavaScript. Using these skills, I have built several websites.</p>
@@ -220,7 +221,7 @@
                   <h4 class="subheading">The Beginning of My Life</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">I was born in May 2002, in south central Kentucky. For the next few years, I grew up doing what all kids do; watching cartoons, exploring my yard, and playing with toys. It was at this point in my life that my interest in music revealed itself. I had several drum sets when I was small, and the occasional guitar. Oh - and I was always interested in using the computer.</p>
+                  <p class="text-muted">I was born in May 2002, in South Central Kentucky. For the next few years, I grew up doing what all kids do; watching cartoons, exploring my yard, and playing with toys. It was at this point in my life that my interest in music revealed itself. I had several drum sets when I was small, and the occasional guitar. Oh - and I was always interested in using the computer.</p>
                 </div>
               </div>
             </li>
@@ -254,7 +255,7 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80" alt="">
+                <img class="rounded-circle img-fluid" src=" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -313,7 +314,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; Your Website 2019</span>
+          <span class="copyright">Copyright &copy; Justin Pippin 2019</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
@@ -471,7 +472,7 @@
                   </a>
                 <p class="item-intro text-muted"></p>
                 <img class="img-fluid d-block mx-auto" src="Screen Shot 2019-09-30 at 1.48.47 PM.png" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <p>This project is a site for creating a simple to-do list. It displays the list items on the screen, with instructions on how to interact with the site. </p>
                 <ul class="list-inline">
                   <li>Date: September 2019</li>
                 </ul>
