--- a/index.html
+++ b/index.html
@@ -255,13 +255,13 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src=" alt="">
+                <!-- <img class="rounded-circle img-fluid" src=" alt=""> -->
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4>August 2019</h4>
                   <h4 class="subheading">Finally Coding</h4>
-                </div>
+                </div> 
                 <div class="timeline-body">
                   <p class="text-muted">That brings us to the current time! In August 2019, I began my senior year of high school and entered the world of coding. It was intimidating at first. The words and numbers on the screen made little sense. When I stared the odd characters within my device, they seemed to stared back at me coldly. But, with a little bit of time, they quickly became comfortable reminders that I was again coding. I started to understand how websites actually worked. It was amazing to see something as simple as an element that I would have had no idea of before! It's hard to believe that I'm creating my own portfolio website using just about a month and a half's worth of knowledge, but I am, and you're reading it!</p>
                 </div>
