Fixed spelling error

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                   <h4 class="subheading">Personal Growth</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">When I entered middle school, things began to change. I started to see things and hear things that I was totally oblivious to before. There were cliques in my elementary school, but they were harmless. It wasn't the same here. I quickly realized that some just didn't care about others. I decided that I would not be like that. If someone asked for help, I'd help them. If someone asked for advice, I'd give them advice. And if I coudln't do that, I would at least respond to someone when spoken to.</p>
+                  <p class="text-muted">When I entered middle school, things began to change. I started to see things and hear things that I was totally oblivious to before. There were cliques in my elementary school, but they were harmless. It wasn't the same here. I quickly realized that some just didn't care about others. I decided that I would not be like that. If someone asked for help, I'd help them. If someone asked for advice, I'd give them advice. And if I couldn't do that, I would at least respond to someone when spoken to.</p>
                 </div>
               </div>
             </li>
