Added photos and info

--- a/index.html
+++ b/index.html
@@ -74,26 +74,35 @@
       </div>
       <div class="row text-center">
         <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+            <div class="timeline-image">
+              <img class="rounded-circle img-fluid" src="code-coding-conceptual-270360 Cropped.jpg">
+              </div>
+          <!-- <span class="fa-stack fa-4x">
+            <i class="fas fa-circle fa-stack-2x text-primary"></i>
               <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
-          </span>
+          </span> -->
           <h4 class="service-heading">My Skills</h4>
-          <p class="text-muted">Having participated in the Fleurish/BC Skills Cohort II program, I have become skilled in HTML, CSS, and JavaScript. Using these skills, I have built several websites.</p>
+          <p class="text-muted">Having participated in the Fleurish/BC Skills Cohort II program, I have become skilled in HTML5, CSS3, JavaScript, Bootstrap, jQuery, and AJAX. Using these skills, I have built several websites.</p>
         </div>
         <div class="col-md-4">
-          <span class="fa-stack fa-4x">
+            <div class="timeline-image">
+                <img class="rounded-circle img-fluid" src="pexels-photo-459059 Cropped.jpg" alt="">
+                </div>
+          <!-- <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
-          </span>
+          </span> -->
           <h4 class="service-heading">Adaptation</h4>
                     <p class="text-muted">As a developer, I'm aware of change. You can't escape it. That's why I embrace change and throw myself into it, full-force; I'm always willing to learn new things. As the world grows and advances, so will I.</p>
         </div>
         <div class="col-md-4">
-          <span class="fa-stack fa-4x">
+            <div class="timeline-image">
+                <img class="rounded-circle img-fluid" src="pexels-photo-983831 Cropped.jpg" alt="">
+                </div>
+          <!-- <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
-          </span>
+          </span> -->
           <h4 class="service-heading">Personal Life</h4>
           <p class="text-muted">In my time not spent at work or school, I enjoy playing and listening to music. I have 3 little brothers, which can be quite a handful. And of course, if my time isn't occupied by either of those things, I'm probably sleeping.</p>
         </div>
@@ -227,7 +236,7 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="" alt="">
+                <img class="rounded-circle img-fluid" src="apple-blur-book-stack-256520%20Cropped.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -241,7 +250,7 @@
             </li>
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
+              <img class="rounded-circle img-fluid" src="bright-bulb-close-up-1108572 Cropped.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -255,7 +264,7 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <!-- <img class="rounded-circle img-fluid" src=" alt=""> -->
+                <img class="rounded-circle img-fluid" src="pexels-photo-270366 Cropped.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
