--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">About Me</h2>
-          <h3 class="section-subheading text-muted">Here's are a few things to know about me!</h3>
+          <h3 class="section-subheading text-muted">Here are a few things to know about me!</h3>
         </div>
       </div>
       <div class="row text-center">
